--- a/project.json
+++ b/project.json
@@ -9,7 +9,8 @@
       "outputs": ["{options.outputPath}"],
       "defaultConfiguration": "production",
       "options": {
-        "outputPath": "dist/checkers"
+        "outputPath": "dist/checkers",
+        "base": "https://wordpressballer.com/checkers/"
       },
       "configurations": {
         "development": {
